# Eva-Project

./: .gitattributes  .gitignore  API.md  Cargo.toml  GIT.MD  README.md  TODO.md  description.md  docs.md  flake.nix  models.md
.githooks/: pre-commit
.github/workflows/: build.yml  lint.yml  test.yml
core/: Cargo.toml
core/src/: config.rs  main.rs  state.rs
core/src/api/: mod.rs
core/src/context_engine/: mod.rs
core/src/discovery/: mod.rs  tool_analyzer.rs
core/src/engine/: cat_executor.rs  mod.rs
core/src/ipc/: mod.rs  shmem_manager.rs
core/src/registry/: mod.rs
core/src/router/: mod.rs
core/src/scheduler/: mod.rs
core/src/worker_manager/: mod.rs
eva-api/: Cargo.toml
eva-api/src/: main.rs
eva-web-ui/: flake.nix  package.json
eva-web-ui/src/: App.svelte  app.css
registry/: README.md  cat_registry.yaml  model_registry.yaml
registry/pipelines/: default_ingress.yaml  dynamic_routing.yaml
scripts/: download_models.sh
shared-ipc/: Cargo.toml  build.rs
shared-ipc/proto/: eva.proto
shared-ipc/src/: lib.rs  memory_map.rs  protocol.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: ipc_integration.rs
ui/: package-lock.json
ui/src/: App.svelte
worker-candle/: Cargo.toml
worker-candle/src/: inference.rs  main.rs  model_loader.rs
