[package]
name = "eva-api"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-ipc = { path = "../shared-ipc" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
anyhow = "1.0"
tower = "0.4"
uuid = { version = "1.7", features = ["v4"] }
