[package]
name = "shared-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_memory = "0.12"
libc = "0.2"
memmap2 = "0.9.4"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"
