[package]
name = "worker-candle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3.2"
shared-ipc = { path = "../shared-ipc" }
shared_memory = "0.12"
clap = { version = "4.4", features = ["derive"] }
tokenizers = "0.19.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
